# terrainflow

./: .coverage  .gitignore  CLAUDE.md  README.md  deploy.ps1  deploy.sh  pyproject.toml  pytest.ini  requirements-dev.txt  terrainflow.md
.claude/: settings.local.json
.github/workflows/: ci.yml
CLudeDocs/: TerrainFlow_Next_Steps.docx  TerrainFlow_Plugin_State.docx
terrainflow_assessment/: __init__.py  earthwork_properties_dialog.py  metadata.txt  panel.py  plugin.py
terrainflow_assessment/core/registry/: earthwork_types.py
terrainflow_assessment/map_tools/: __init__.py  contour_segment_tool.py  draw_line_tool.py  draw_polygon_tool.py  place_point_tool.py  ponding_query_tool.py  select_contour_tool.py
terrainflow_assessment/modules/: __init__.py  catchment.py  contour_analysis.py  dem_loader.py  earthwork_design.py  flow_analysis.py  keypoint_analysis.py  reporting.py  simulation.py  swale_design.py
terrainflow_assessment/qgis/: plugin.py
terrainflow_assessment/qgis/adapters/: geom.py  project.py
terrainflow_assessment/qgis/controllers/: _state.py  baseline.py  contour.py  earthworks.py  reporting.py  simulation.py
terrainflow_assessment/qgis/workers/: analysis_worker.py  simulation_worker.py
terrainflow_assessment/terrainflow_assessment/: metadata.txt  panel.py  plugin.py
terrainflow_assessment/terrainflow_assessment/docs/: methodology.md
tests/: conftest.py  test_catchment.py  test_contour_analysis.py  test_contributing_area.py  test_coverage_gaps.py  test_dem_burner.py  test_dem_loader.py  test_earthwork.py  test_earthwork_design.py  test_flow_analysis_assessment.py  test_flow_analysis_init.py  test_keyline_analysis.py  test_keyline_yeomans.py  test_reporting.py  test_scs_runoff.py  test_simulation.py  test_swale_design.py
tests/core/: conftest.py  test_earthwork_types.py
(+10 files in other folders)
